# atc_menu

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  demo.c  sensor_helpers.h  sensor_sim.c  sensor_sim.h
include/atc_menu/: atc_menu.h  atc_menu_macros.h  log_ring.h  menu.h  menu_macros.h
ports/mock/: mock_port.c  mock_port.h
src/: ansi.h  atc_menu.c  builder.c  cmdmode.c  cmdmode.h  fmt.c  internal.h  layout.h  log_ring.c  menu.c  nav.c  nav.h  render.c  render.h  symbols.h  widget.c  widget.h  widget_action.c  widget_bar.c  widget_choice.c  widget_group.c  widget_input.c  widget_state.c  widget_submenu.c  widget_value.c
src/core/: internal.h  menu.c
src/input/: cmdmode.c  cmdmode.h  nav.c  nav.h
src/render/: ansi.h  layout.h  render.c  render.h  row.c  row.h  symbols.h
src/widgets/: widget.c  widget.h  widget_action.c  widget_bar.c  widget_choice.c  widget_group.c  widget_input.c  widget_state.c  widget_submenu.c  widget_value.c
templates/: widget_template.c
tests/: CMakeLists.txt  dump_bandwidth.c  dump_render.c  dump_warn.c  test_builder.c  test_handle_key.c  test_header.c  test_hybrid.c  test_init.c  test_log_ring.c  test_log_view.c  test_macros.c  test_printf.c  test_render.c  test_widgets.c  testing.h
